--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "bcryptjs": "2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
-    "express-session": "^1.16.1",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.16.1",
+    "fullcalendar": "^5.5.1",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
