--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "bcryptjs": "2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.16.1",
+    "install": "^0.13.0",
     "mysql2": "^1.7.0",
+    "npm": "^7.7.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.22.4"
